toggle to counter

--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -1,9 +1,5 @@
 .Counter{
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  flex-grow: 1;
 }
 .Counter .Counter-button{
   width: 100%;
