--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
+  position: relative;
   flex-direction: column;
-  justify-content: space-around;
-  height: 300px;
+  height: 100%;
 }
 
