--- a/src/components/Toggle/Toggle.css
+++ b/src/components/Toggle/Toggle.css
@@ -1,13 +1,21 @@
-.Toogle{
-  position: relative;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.Toggle {
+  height: 2rem;
+  width: 3rem;
+  display: flex;
+  align-items: center;
+  padding: 0 0.5rem;
+  background-color:red;
+  transition: background-color 0.25s ease-in-out;
 }
-.Toggle .Toggle-label{
-  width: 100%;
-  height: 100%;
-  border: 0;
-  transition: background-color 2s;
+.Toggle.Toggle-on {
+  background-color: grey;
+}
+.Toggle .Toggle-indicator {
+  height: 1.5rem;
+  width: 1.5rem;
+  background-color: white;
+  transition: transform 0.25s ease-in-out;
+}
+.Toggle.Toggle-on .Toggle-indicator {
+  transform: translateX(1.5rem);
 }
